Finish game logic, reduce max value of clamp for body to prevent overflow, add html form

--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -5,6 +5,7 @@
   --body-bg-color: rgb(224, 224, 224);
   --board-bg-color: rgb(214, 214, 214);
   --board-shadow-color: rgb(117, 117, 117);
+  --invalid-input-color: red;
 }
 
 /* Soft Reset */
@@ -16,7 +17,7 @@
 
 body {
   height: 100vh;
-  width: clamp(320px, 90%, 700px);
+  width: clamp(320px, 90%, 600px);
   margin: 0 auto;
   background-color: var(--body-bg-color);
 }
@@ -44,6 +45,11 @@ body {
   justify-content: center;
   gap: 30px;
   height: 100%;
+}
+
+.result {
+  align-self: center;
+  font-size: 3rem;
 }
 
 .board {
@@ -75,6 +81,45 @@ body {
   box-shadow: 0px 2px 15px var(--board-shadow-color);
 }
 
+#inputs {
+  display: flex;
+  justify-content: space-between;
+}
+
+.label-input-pair {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+
+#name1,
+#name2 {
+  padding: 3px;
+  border: none;
+  box-shadow: 0px 2px 8px var(--board-shadow-color);
+  border-radius: 5px;
+}
+
+.label-input-pair label::after {
+  content: "*";
+  margin-left: 1px;
+}
+
+#name1:focus {
+  outline: var(--orange) solid 2px;
+}
+
+#name2:focus {
+  outline: var(--blue) solid 2px;
+}
+
+#name1:invalid,
+#name2:invalid {
+  outline: var(--invalid-input-color) solid 2px;
+  box-shadow: 0px 2px 10px var(--invalid-input-color);
+}
+
 .buttons-container {
   display: flex;
   justify-content: center;
@@ -91,6 +136,11 @@ body {
   border-radius: 5px;
   cursor: pointer;
   transition: transform 0.5s ease-in-out;
+}
+
+#restart,
+#clear {
+  display: none;
 }
 
 .buttons-container button:hover {
